--- a/python/templates/medico/adminota.html
+++ b/python/templates/medico/adminota.html
@@ -11,6 +11,19 @@
 	<p>Seleccione una opción</p>
 </div>
 <div class="container">
+	{% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+       <div class="alert alert-success alert-dismissable" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="close">
+            <span aria-hidden="true">X</span>
+        </button>
+             {{message}}
+    </div>
+    {% endfor  %}
+    {% endif %}
+    {% endwith %}
+<div class="container">
 	<center>
 	<table>
 		<tbody>
@@ -53,11 +66,11 @@
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
-			<td><a href=""><button type="submit" value="Modificar nota médica<" class="btn btn-success">Modificar nota médica</button></a></td>
+			<td><a href="{{url_for('seleccionpacientenotacambio')}}"><button type="submit" value="Modificar nota médica<" class="btn btn-success">Modificar nota médica</button></a></td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
-			<td><a href=""><button type="submit" value="Eliminar nota médica<" class="btn btn-success">Eliminar nota médica</button></a></td>
+			<td><a href="{{url_for('seleccionpacientenotabaja')}}"><button type="submit" value="Eliminar nota médica<" class="btn btn-success">Eliminar nota médica</button></a></td>
 			</tr>
 		</tbody>
 	</table> 
