--- a/python/templates/404.html
+++ b/python/templates/404.html
@@ -14,7 +14,7 @@ El recurso que está buscando no existe o ya no se encuentra disponible. Favor d
  <hr>
 <img src="{{url_for('static', filename='404.jpg')}}" alt="404" style="width:800px;height:463px;">
 <br>	
-<a href="/"><button class="btn btn-success navbar-btn">Regresar</button> </a>
+<a href="{{url_for('reddr')}}"><button class="btn btn-success navbar-btn">Regresar</button> </a>
 
 </center>
 
