--- a/python/templates/base.html
+++ b/python/templates/base.html
@@ -17,7 +17,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{{url_for('Login')}}">Inicio<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{url_for('reddr')}}">Inicio<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('about')}}">Acerca de</a>
