--- a/python/templates/medico/cambionota.html
+++ b/python/templates/medico/cambionota.html
@@ -140,32 +140,32 @@
                                         id="fecha{{item[5]}}{{item[6]}}" disabled>
                                     </div>
                                     <div class="form-group">
-                                        <label>Peso</label>
+                                        <label>Peso (KG)</label>
                                         <input type="text" class="form-control" name="peso{{item[5]}}{{item[6]}}"
                                         id="peso{{item[5]}}{{item[6]}}" disabled>
                                     </div>
                                     <div class="form-group">
-                                        <label>Talla</label>
+                                        <label>Talla (CM)</label>
                                         <input type="text" class="form-control" name="talla{{item[5]}}{{item[6]}}"
                                         id="talla{{item[5]}}{{item[6]}}" disabled>
                                     </div>
                                     <div class="form-group">
-                                        <label>Tension</label>
+                                        <label>Tension (mm)</label>
                                         <input type="text" class="form-control" name="tension{{item[5]}}{{item[6]}}"
                                          id="tension{{item[5]}}{{item[6]}}" disabled>
                                     </div>
                                     <div class="form-group">
-                                        <label>Frecuencia cardiaca</label>
+                                        <label>Frecuencia cardiaca (lat/min)</label>
                                         <input type="text" class="form-control" name="frecuenciaCardiaca{{item[5]}}{{item[6]}}"
                                         id="frecuenciaCardiaca{{item[5]}}{{item[6]}}" disabled>
                                     </div>
                                     <div class="form-group">
-                                        <label>Frecuencia Respiratoria</label>
+                                        <label>Frecuencia Respiratoria (por minuto)</label>
                                         <input type="text" class="form-control" name="frecuenciaRespiratoria{{item[5]}}{{item[6]}}"
                                         id="frecuenciaRespiratoria{{item[5]}}{{item[6]}}" disabled>
                                     </div>
                                     <div class="form-group">
-                                        <label class="text-dark">Temperatura</label>
+                                        <label class="text-dark">Temperatura (°C)</label>
                                         <input type="text" class="form-control" name="temperatura{{item[5]}}{{item[6]}}" id="temperatura{{item[5]}}{{item[6]}}" disabled>
                                     </div>
                                 </div>
@@ -214,49 +214,49 @@
                                         <label class="text-info">Resumen Interrogatorio</label>
                                         <input type="hidden"  name="id" value="{{item[5]}}">
                                         <textarea class="form-control" name="resumenInterrogatorioinfo"
-                                        id="resumenInterrogatorioinfo{{item[5]}}{{item[6]}}" rows="3"></textarea>
+                                        id="resumenInterrogatorioinfo{{item[5]}}{{item[6]}}" rows="3" required></textarea>
                                     </div>
                                     <div class="form-group">
                                         <label class="text-info">Plan o tratamiento</label>
                                         <input type="hidden"  name="id" value="{{item[5]}}">
                                         <textarea class="form-control" name="planotratamientoinfo"
-                                        id="planotratamientoinfo{{item[5]}}{{item[6]}}" rows="3"></textarea>
+                                        id="planotratamientoinfo{{item[5]}}{{item[6]}}" rows="3" required></textarea>
                                     </div>
                                     <div class="form-group">
                                         <label class="text-info">Pronostico</label>
                                         <input type="hidden"  name="id" value="{{item[5]}}">
                                         <textarea class="form-control" name="pronosticoinfo"
-                                        id="pronosticoinfo{{item[5]}}{{item[6]}}"  rows="3"></textarea>
+                                        id="pronosticoinfo{{item[5]}}{{item[6]}}"  rows="3" required></textarea>
                                     </div>
                                     <div class="form-group">
                                         <label class="text-info">Exploración</label>
                                         <input type="hidden"  name="id" value="{{item[5]}}">
                                         <textarea class="form-control" name="exploracioninfo"
-                                        id="exploracioninfo{{item[5]}}{{item[6]}}" rows="3"></textarea>
+                                        id="exploracioninfo{{item[5]}}{{item[6]}}" rows="3" required></textarea>
                                     </div>
                                     <div class="form-group">
                                         <label class="text-info">Resultado</label>
                                         <input type="hidden"  name="id" value="{{item[5]}}">
                                         <textarea class="form-control" name="resultadoinfo"
-                                        id="resultadoinfo{{item[5]}}{{item[6]}}" rows="3"></textarea>
+                                        id="resultadoinfo{{item[5]}}{{item[6]}}" rows="3" required></textarea>
                                     </div>
                                     <div class="form-group">
                                         <label class="text-info">Diagnostico</label>
                                         <input type="hidden"  name="id" value="{{item[5]}}">
                                         <textarea class="form-control" name="diagnosticoinfo"
-                                        id="diagnosticoinfo{{item[5]}}{{item[6]}}" rows="3"></textarea>
+                                        id="diagnosticoinfo{{item[5]}}{{item[6]}}" rows="3" required></textarea>
                                     </div>
                                     <div class="form-group">
                                         <label class="text-info">Estado Mental</label>
                                         <input type="hidden"  name="id" value="{{item[5]}}">
                                         <textarea class="form-control" name="edomentalinfo"
-                                        id="edomentalinfo{{item[5]}}{{item[6]}}" rows="3"></textarea>
+                                        id="edomentalinfo{{item[5]}}{{item[6]}}" rows="3" required></textarea>
                                     </div>
                                     <div class="form-group">
                                         <label class="text-info">Fecha de elaboración</label>
                                         <input type="hidden"  name="id" value="{{item[5]}}">
                                         <input type="text" class="form-control" name="fechainfo"
-                                        id="fechainfo{{item[5]}}{{item[6]}}">
+                                        id="fechainfo{{item[5]}}{{item[6]}}" required>
                                     </div>
                                     <div class="form-group">
                                             <button class="btn btn-primary" type="submit">Actualizar</button>
@@ -303,39 +303,40 @@
                                         });
                                     </script>
                                     <div class="form-group">
-                                        <label>Peso</label>
+                                        <label>Peso (KG)</label>
                                         <input type="hidden"  name="id" value="{{item[6]}}">
                                         <input type="text" class="form-control" name="pesosignos"
-                                        id="pesosignos{{item[5]}}{{item[6]}}">
+                                        id="pesosignos{{item[5]}}{{item[6]}}" required pattern="^[0-9]*$" title="No se caracteres no numéricos">
                                     </div>
                                     <div class="form-group">
-                                        <label>Talla</label>
+                                        <label>Talla (CM)</label>
                                         <input type="hidden"  name="id" value="{{item[6]}}">
                                         <input type="text" class="form-control" name="tallasignos"
-                                        id="tallasignos{{item[5]}}{{item[6]}}">
+                                        id="tallasignos{{item[5]}}{{item[6]}}" required pattern="^[0-9]*$" title="No se caracteres no numéricos">
                                     </div>
                                     <div class="form-group">
-                                        <label>Tension</label>
+                                        <label>Tension (mm)</label>
                                         <input type="hidden"  name="id" value="{{item[6]}}">
                                         <input type="text" class="form-control" name="tensionsignos"
-                                         id="tensionsignos{{item[5]}}{{item[6]}}">
+                                         id="tensionsignos{{item[5]}}{{item[6]}}" required>
                                     </div>
                                     <div class="form-group">
-                                        <label>Frecuencia cardiaca</label>
+                                        <label>Frecuencia cardiaca (lat/min)</label>
                                         <input type="hidden"  name="id" value="{{item[6]}}">
                                         <input type="text" class="form-control" name="frecuenciaCardiacasignos"
-                                        id="frecuenciaCardiacasignos{{item[5]}}{{item[6]}}">
+                                        id="frecuenciaCardiacasignos{{item[5]}}{{item[6]}}" required>
                                     </div>
                                     <div class="form-group">
-                                        <label>Frecuencia Respiratoria</label>
+                                        <label>Frecuencia Respiratoria (por minuto)</label>
                                         <input type="hidden"  name="id" value="{{item[6]}}">
                                         <input type="text" class="form-control" name="frecuenciaRespiratoriasignos"
-                                        id="frecuenciaRespiratoriasignos{{item[5]}}{{item[6]}}">
+                                        id="frecuenciaRespiratoriasignos{{item[5]}}{{item[6]}}" required pattern="^[0-9]*$" title="No se caracteres no numéricos">
                                     </div>
                                     <div class="form-group">
-                                        <label class="text-dark">Temperatura</label>
+                                        <label class="text-dark">Temperatura (°C)</label>
                                         <input type="hidden"  name="id" value="{{item[6]}}">
-                                        <input type="text" class="form-control" name="temperaturasignos" id="temperaturasignos{{item[5]}}{{item[6]}}">
+                                        <input type="text" class="form-control" name="temperaturasignos" id="temperaturasignos{{item[5]}}{{item[6]}}" required pattern="^[0-9]*$"
+                                         title="No se caracteres no numéricos">
                                     </div>
                                     <div class="form-group">
                                             <button class="btn btn-primary" type="submit">Actualizar</button>
