--- a/python/templates/medico/cambionota.html
+++ b/python/templates/medico/cambionota.html
@@ -259,7 +259,7 @@
                                         id="fechainfo{{item[5]}}{{item[6]}}" required>
                                     </div>
                                     <div class="form-group">
-                                            <button class="btn btn-primary" type="submit">Actualizar</button>
+                                            <button class="btn btn-primary" type="submit" onclick="return confirm('¿Está seguro de Actualizar este registro?')">Actualizar</button>
                                     </div>
                                     </form>
                                 </div>
@@ -339,7 +339,7 @@
                                          title="No se caracteres no numéricos">
                                     </div>
                                     <div class="form-group">
-                                            <button class="btn btn-primary" type="submit">Actualizar</button>
+                                            <button class="btn btn-primary" type="submit" onclick="return confirm('¿Está seguro de Actualizar este registro?')">Actualizar</button>
                                     </div>
                                     </form>
                                 </div>
