--- a/python/templates/admin/cambiomedico.html
+++ b/python/templates/admin/cambiomedico.html
@@ -76,17 +76,17 @@
 										<div class="form-group">
 											<label>Nombre:</label>
 											<input type="hidden"  name="id" value="{{item[8]}}">
-											<input type="text" class="form-control" name="nombre" value="{{item[0]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números en el nombre">
+											<input type="text" class="form-control" name="nombre" value="{{item[0]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
 										</div>
 										<div class="form-group">
 											<label>Apellido Paterno:</label>
 											<input type="hidden"  name="id" value="{{item[8]}}">
-											<input type="text" class="form-control" name="apaterno" value="{{item[1]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números en el nombre">
+											<input type="text" class="form-control" name="apaterno" value="{{item[1]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
 										</div>
 										<div class="form-group">
 											<label>Apellido Materno:</label>
 											<input type="hidden"  name="id" value="{{item[8]}}}">
-											<input type="text" class="form-control" name="amaterno" value="{{item[2]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números en el nombre">
+											<input type="text" class="form-control" name="amaterno" value="{{item[2]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
 										</div>
 										<div class="form-group">
 											<button class="btn btn-primary" type="submit" onclick="return confirm('¿Está seguro de Actualizar este registro?')">Actualizar</button>
@@ -141,7 +141,7 @@
 										<div class="form-group">
 											<label>Especialidad:</label>
 											<input type="hidden"  name="id" value="{{item[10]}}">
-											<input type="text" class="form-control" name="especialidad" value="{{item[4]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números">
+											<input type="text" class="form-control" name="especialidad" value="{{item[4]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
 										</div>
 										<div class="form-group">
 											<label>Email:</label>
@@ -151,7 +151,7 @@
 										<div class="form-group">
 											<label>Ciudad:</label>
 											<input type="hidden"  name="id" value="{{item[10]}}">
-											<input type="text" class="form-control" name="ciudad" value="{{item[6]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números">
+											<input type="text" class="form-control" name="ciudad" value="{{item[6]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
 										</div>
 										<div class="form-group">
 											<button class="btn btn-primary" onclick="return confirm('¿Está seguro de Actualizar este registro?')" type="submit">Actualizar</button>
