--- a/python/templates/medico/cambiopaciente.html
+++ b/python/templates/medico/cambiopaciente.html
@@ -66,17 +66,17 @@
 										<div class="form-group">
 											<label>Nombre:</label>
 											<input type="hidden"  name="id" value="{{item[5]}}">
-											<input type="text" class="form-control" name="nombre" value="{{item[0]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números en el nombre">
+											<input type="text" class="form-control" name="nombre" value="{{item[0]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
 										</div>
 										<div class="form-group">
 											<label>Apellido Paterno:</label>
 											<input type="hidden"  name="id" value="{{item[5]}}">
-											<input type="text" class="form-control" name="apaterno" value="{{item[1]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números en el nombre">
+											<input type="text" class="form-control" name="apaterno" value="{{item[1]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
 										</div>
 										<div class="form-group">
 											<label>Apellido Materno:</label>
 											<input type="hidden"  name="id" value="{{item[5]}}}">
-											<input type="text" class="form-control" name="amaterno" value="{{item[2]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números en el nombre">
+											<input type="text" class="form-control" name="amaterno" value="{{item[2]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
 										</div>
 										<div class="form-group">
 											<button class="btn btn-primary" type="submit" onclick="return confirm('¿Está seguro de Actualizar este registro?')">Actualizar</button>
