--- a/python/templates/medico/consultanotaregular.html
+++ b/python/templates/medico/consultanotaregular.html
@@ -51,7 +51,10 @@
                                             $.ajax({
                                                 type: "GET",
                                                 url: "http://127.0.0.1:5000/medico/notequery/{{item[5]}}/{{item[6]}}",
-                                                //dataType: 'json',
+                                                headers: {
+                                                    'Content-Type': 'application/x-www-form-urlencoded'
+                                                },
+                                                dataType: 'json',
                                                 success: function(data) {
                                                     var total = JSON.stringify(data);
                                                     console.log("This is the returned data: " + total);
