--- a/python/templates/medico/cambiopaciente.html
+++ b/python/templates/medico/cambiopaciente.html
@@ -99,6 +99,11 @@
 								<div class="modal-body">
 									<form action="{{url_for('datosPaciente')}}" method="POST">
 										<div class="form-group">
+											<label>CURP:</label>
+											<input type="hidden"  name="id" value="{{item[6]}}">
+											<input type="text" class="form-control" name="curp" value="{{item[8]}}" required pattern="^[A-Z]{1}[AEIOU]{1}[A-Z]{2}[0-9]{2}(0[1-9]|1[0-2])(0[1-9]|1[0-9]|2[0-9]|3[0-1])[HM]{1}(AS|BC|BS|CC|CS|CH|CL|CM|DF|DG|GT|GR|HG|JC|MC|MN|MS|NT|NL|OC|PL|QT|QR|SP|SL|SR|TC|TS|TL|VZ|YN|ZS|NE)[B-DF-HJ-NP-TV-Z]{3}[0-9A-Z]{1}[0-9]{1}$" title="No se admiten caracteres no numéricos">
+										</div>
+										<div class="form-group">
 											<label>Sexo:</label>
 											<input type="hidden" name="id" value="{{item[6]}}">
 											<select name="sexo" class="form-control">
