--- a/python/templates/medico/readtag.html
+++ b/python/templates/medico/readtag.html
@@ -8,8 +8,12 @@
 </div>
 <div class="container">
 	<center>
+    <form method ="POST" action="">
+      <input id="idCurp"></input>
+      <input value="botonEnviar" type="submit"></input>
+    </form>
 		Leyendo....
-	</center> 	
+	</center>
 </div>
 
 {% endblock %}
