--- a/python/templates/medico/cambionota.html
+++ b/python/templates/medico/cambionota.html
@@ -256,7 +256,7 @@
                                         <label class="text-info">Fecha de elaboración</label>
                                         <input type="hidden"  name="id" value="{{item[5]}}">
                                         <input type="text" class="form-control" name="fechainfo"
-                                        id="fechainfo{{item[5]}}{{item[6]}}" required>
+                                        id="fechainfo{{item[5]}}{{item[6]}}" disabled>
                                     </div>
                                     <div class="form-group">
                                             <button class="btn btn-primary" type="submit" onclick="return confirm('¿Está seguro de Actualizar este registro?')">Actualizar</button>
