--- a/python/templates/medico/readtag.html
+++ b/python/templates/medico/readtag.html
@@ -2,18 +2,58 @@
 {% block title %} Lectura de etiqueta {% endblock %}
 {% block body %}
 <div class="container">
-    <h1>Lectura de etiqueta</h1>
+    <h1>Selección de paciente</h1>
     <hr>
-	<p>Por favor coloque la etiqueta RFID de su paciente en el lector</p>
+	<p>Seleccione al(la) paciente propietario(a) de la etiqueta a leer.</p>
 </div>
 <div class="container">
-	<center>
-    <form method ="POST" action="">
-      <input id="idCurp"></input>
-      <input value="botonEnviar" type="submit"></input>
-    </form>
-		Leyendo....
-	</center>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+       <div class="alert alert-success alert-dismissable" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="close">
+            <span aria-hidden="true">X</span>
+        </button>
+             {{message}}
+    </div>
+    {% endfor  %}
+    {% endif %}
+    {% endwith %}
+<div class="container">
+  <div class="table-responsive-md">
+    <center>
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col" class="align-middle" style="text-align: center;display:none;">idpersona</th>
+            <th scope="col" class="align-middle" style="text-align: center;display:none;">idpaciente</th>
+                  <th scope="col" class="align-middle" style="text-align: center;">Nombre</th>
+                  <th scope="col" class="align-middle" style="text-align: center;">Apellido Paterno</th>
+                  <th scope="col" class="align-middle" style="text-align: center;">Apellido Materno</th>
+                  <th scope="col" class="align-middle" style="text-align: center;">Sexo</th>
+                  <th scope="col" class="align-middle" style="text-align: center;">Edad</th>
+                  <th scope="col" class="align-middle" style="text-align: center;">Opciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for item in data %}
+          <tr>
+            <td scope="col" class="align-middle" style="text-align: center;display:none;">{{item[5]}}</td>
+            <td scope="col" class="align-middle" style="text-align: center;display:none;">{{item[6]}}</td>
+              <td scope="col" class="align-middle" style="text-align: center;">{{item[0]}}</td>
+              <td scope="col" class="align-middle" style="text-align: center;">{{item[1]}}</td>
+              <td scope="col" class="align-middle" style="text-align: center;">{{item[2]}}</td>
+              <td scope="col" class="align-middle" style="text-align: center;">{{item[3]}}</td>
+              <td scope="col" class="align-middle" style="text-align: center;">{{item[4]}}</td>
+              <td scope="col" class="align-middle" style="text-align: center;">
+                <a href="/medico/selectkey/{{item[6]}}" class="btn btn-success btn-xs">Seleccionar Paciente</a>
+              </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+        </table>
+      </center>
+  </div>
 </div>
 
 {% endblock %}
