--- a/python/templates/medico/indexmedico.html
+++ b/python/templates/medico/indexmedico.html
@@ -12,6 +12,18 @@
 	<hr>
 	<p>Seleccione una opción</p>
 </div>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+       <div class="alert alert-success alert-dismissable" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="close">
+            <span aria-hidden="true">X</span>
+        </button>
+             {{message}}
+    </div>
+    {% endfor  %}
+    {% endif %}
+    {% endwith %}
 <div class="container">
 	<center>
 	<table>
