--- a/python/templates/medico/selectkey.html
+++ b/python/templates/medico/selectkey.html
@@ -21,9 +21,9 @@
     {% endwith %}
 <div class="container">
   <form action = "" method = "POST" enctype = "multipart/form-data">
-    <input type = "file" name = "file" />
-    <br>
-    <input type = "submit"/>
+    <input type = "file" class="btn btn-success" name = "file" />
+    <br><br>
+    <input class="btn btn-success" value="Subir llave" type = "submit"/>
   </form>
 </div>
 
