--- a/python/templates/medico/altanota.html
+++ b/python/templates/medico/altanota.html
@@ -188,7 +188,7 @@
       </table>
     </div>
         <p>
-            <input type="submit" value="Guardar información" class="btn btn-success">
+            <input id="altanota-submit" type="submit" value="Guardar información" class="btn btn-success">
         </p>
     </form>
     </center>
