--- a/python/templates/medico/showtag.html
+++ b/python/templates/medico/showtag.html
@@ -13,16 +13,16 @@
     <table class="table">
     <thead class="thead-dark">
         <tr>
-            <th scope="col" class="align-middle" style="text-align: center;">kanyewest</th>
-            <th scope="col" class="align-middle" style="text-align: center;">bromomento</th>
-            <th scope="col" class="align-middle" style="text-align: center;">urico</th>
+            <th scope="col" class="align-middle" style="text-align: center;">criterio diagnóstico</th>
+            <th scope="col" class="align-middle" style="text-align: center;">sugerencias</th>
+            <th scope="col" class="align-middle" style="text-align: center;">motivo</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td class="align-middle" style="text-align: center;">{{kanyewest}}</td>
-            <td class="align-middle" style="text-align: center;">{{bromomento}}</td>
-            <td class="align-middle" style="text-align: center;">{{urico}}</td>
+            <td id="criterio" class="align-middle" style="text-align: center;">{{kanyewest}}</td>
+            <td id="sugerencias" class="align-middle" style="text-align: center;">{{bromomento}}</td>
+            <td id="motivo" class="align-middle" style="text-align: center;">{{urico}}</td>
         </tr><br>
     </tbody>
     </table>
