--- a/python/templates/login.html
+++ b/python/templates/login.html
@@ -50,7 +50,7 @@
     
     </div>
         <p>
-            <input type="submit" value="Iniciar sesión" class="btn btn-success">
+            <input id="login-submit" type="submit" value="Iniciar sesión" class="btn btn-success">
         </p>
     </form>
     </center>
