--- a/python/templates/medico/selectkey.html
+++ b/python/templates/medico/selectkey.html
@@ -21,9 +21,9 @@
     {% endwith %}
 <div class="container">
   <form action = "" method = "POST" enctype = "multipart/form-data">
-    <input type = "file" class="btn btn-success" name = "file" />
+    <input id="key-upload" type="file" class="btn btn-success" name = "file" />
     <br><br>
-    <input class="btn btn-success" value="Subir llave" type = "submit"/>
+    <input id="selectkey-submit" class="btn btn-success" value="Subir llave" type = "submit"/>
   </form>
 </div>
 
