--- a/python/templates/medico/showtag.html
+++ b/python/templates/medico/showtag.html
@@ -13,9 +13,9 @@
     <table class="table">
     <thead class="thead-dark">
         <tr>
-            <th scope="col" class="align-middle" style="text-align: center;">criterio diagnóstico</th>
-            <th scope="col" class="align-middle" style="text-align: center;">sugerencias</th>
-            <th scope="col" class="align-middle" style="text-align: center;">motivo</th>
+            <th scope="col" class="align-middle" style="text-align: center;">Criterio diagnóstico</th>
+            <th scope="col" class="align-middle" style="text-align: center;">Sugerencias</th>
+            <th scope="col" class="align-middle" style="text-align: center;">Motivo</th>
         </tr>
     </thead>
     <tbody>
