--- a/python/templates/medico/consultapaciente.html
+++ b/python/templates/medico/consultapaciente.html
@@ -21,6 +21,7 @@
             <th scope="col" class="align-middle" style="text-align: center;">Apellido Materno</th>
             <th scope="col" class="align-middle" style="text-align: center;">Sexo</th>
             <th scope="col" class="align-middle" style="text-align: center;">Edad</th>
+             <th scope="col" class="align-middle" style="text-align: center;">CURP</th>
         </tr>
     </thead>
     <tbody>
@@ -31,6 +32,7 @@
             <td class="align-middle" style="text-align: center;">{{item[2]}}</td>
             <td class="align-middle" style="text-align: center;">{{item[3]}}</td>
             <td class="align-middle" style="text-align: center;">{{item[4]}}</td>
+            <td class="align-middle" style="text-align: center;">{{item[8]}}</td>
         </tr><br>
     {% endfor %}
     </tbody>
