--- a/python/templates/medico/altapaciente.html
+++ b/python/templates/medico/altapaciente.html
@@ -108,7 +108,7 @@
         <td><img src="{{url_for('static', filename='loading.gif')}}" alt="load"></td>
       </tr>
       <tr>
-      <td><b>Generando llaves, favor de esperar un momento...</b></td>
+      <td><b>Generando llaves y validando información, favor de esperar un momento...</b></td>
       </tr>
     </tbody>
   </table> 
