--- a/python/templates/admin/cambiomedico.html
+++ b/python/templates/admin/cambiomedico.html
@@ -8,7 +8,7 @@
 <div class="container">
     <h1>Registro de usuarios médicos</h1>
     <hr>
-	<p>Por favor seleccione el médico y los datos desee cambiar.</p>
+	<p>Por favor seleccione el médico cuyos datos desee cambiar.</p>
 </div>
 
 <div class="container">
@@ -50,20 +50,81 @@
 						<td class="align-middle" style="text-align: center; display:none;">{{item[8]}}</td>
 						<td class="align-middle" style="text-align: center; display:none;">{{item[9]}}</td>
 						<td class="align-middle" style="text-align: center; display:none;">{{item[10]}}</td>
-					    <td class="align-middle" style="text-align: center;"><p class="text-light">{{item[0]}}</p></td>
-					    <td class="align-middle" style="text-align: center;"><p class="text-light">{{item[1]}}</p></td>
-				    	<td class="align-middle" style="text-align: center;"><p class="text-light">{{item[2]}}</p></td>
-				    	<td class="align-middle" style="text-align: center;"><p class="text-info">{{item[3]}}</p></td>
-				    	<td class="align-middle" style="text-align: center;"><p class="text-info">{{item[4]}}</p></td>
-				    	<td class="align-middle" style="text-align: center;"><p class="text-info">{{item[5]}}</p></td>
-				    	<td class="align-middle" style="text-align: center;"><p class="text-info">{{item[6]}}</p></td>
+					    <td class="align-middle" style="text-align: center;"><p class="text-warning">{{item[0]}}</p></td>
+					    <td class="align-middle" style="text-align: center;"><p class="text-warning">{{item[1]}}</p></td>
+				    	<td class="align-middle" style="text-align: center;"><p class="text-warning">{{item[2]}}</p></td>
+				    	<td class="align-middle" style="text-align: center;"><p class="text-warning">{{item[3]}}</p></td>
+				    	<td class="align-middle" style="text-align: center;"><p class="text-warning">{{item[4]}}</p></td>
+				    	<td class="align-middle" style="text-align: center;"><p class="text-warning">{{item[5]}}</p></td>
+				    	<td class="align-middle" style="text-align: center;"><p class="text-warning">{{item[6]}}</p></td>
 				    	<td class="align-middle" style="text-align: center;"><p class="text-warning">{{item[7]}}</p></td>
 				    	<td class="align-middle" style="text-align: center;">
-				    		<a href="/datosPersona/{{item[8]}}" class="btn btn-light btn-xs" data-toggle="modal" data-toggle="modal" data-target="#modaleditPersona{{item[8]}}">Modificar datos personales</a>
+				    		<a href="/datosMedicoCambio/{{item[8]}}{{item[9]}}{{item[10]}}" class="btn btn-light btn-xs" data-toggle="modal" data-toggle="modal" data-target="#modaledit{{item[8]}}{{item[9]}}{{item[10]}}">Modificar datos</a>
+				    		<!--<a href="/datosPersona/{{item[8]}}" class="btn btn-light btn-xs" data-toggle="modal" data-toggle="modal" data-target="#modaleditPersona{{item[8]}}">Modificar datos personales</a>
 				    		<a href="/datosMedico/{{item[10]}}" class="btn btn-info btn-xs" data-toggle="modal" data-target="#modaleditMedico{{item[10]}}">Modificar datos de médico</a>
-				    		<a href="/datosUsuario/{{item[9]}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaleditUsuario{{item[9]}}">Modificar datos de usuario</a>
+				    		<a href="/datosUsuario/{{item[9]}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaleditUsuario{{item[9]}}">Modificar datos de usuario</a>-->
 				    	</td>
 					</tr>
+					<!--todo-->
+					<div id="modaledit{{item[8]}}{{item[9]}}{{item[10]}}" class="modal fade" role="dialog">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h4 class="modal-title">Modificar información de usuario médico</h4>
+								</div>
+								<div class="modal-body">
+									<form action="{{url_for('datosMedicoCambio')}}" method="POST">
+										<div class="form-group">
+											<label>Nombre:</label>
+											<input type="hidden"  name="idPersona" value="{{item[8]}}">
+											<input type="text" class="form-control" name="nombre" value="{{item[0]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
+										</div>
+										<div class="form-group">
+											<label>Apellido Paterno:</label>
+											<input type="hidden"  name="idPersona" value="{{item[8]}}">
+											<input type="text" class="form-control" name="apaterno" value="{{item[1]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
+										</div>
+										<div class="form-group">
+											<label>Apellido Materno:</label>
+											<input type="hidden"  name="idPersona" value="{{item[8]}}}">
+											<input type="text" class="form-control" name="amaterno" value="{{item[2]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
+										</div>
+										<div class="form-group">
+											<label>Nombre de usuario:</label>
+											<input type="hidden"  name="idUsuario" value="{{item[9]}}">
+											<input type="text" class="form-control" name="username" value="{{item[7]}}" required>
+										</div>
+										<div class="form-group">
+											<label>Cedula:</label>
+											<input type="hidden"  name="idMedico" value="{{item[10]}}">
+											<input type="text" class="form-control" name="cedula" value="{{item[3]}}" required pattern="^[0-9]*$" title="No se admiten caracteres no numéricos">
+										</div>
+										<div class="form-group">
+											<label>Especialidad:</label>
+											<input type="hidden"  name="idMedico" value="{{item[10]}}">
+											<input type="text" class="form-control" name="especialidad" value="{{item[4]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
+										</div>
+										<div class="form-group">
+											<label>Email:</label>
+											<input type="hidden"  name="idMedico" value="{{item[10]}}">
+											<input type="text" class="form-control" name="correo" value="{{item[5]}}" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="El correo ingresado es inválido">
+										</div>
+										<div class="form-group">
+											<label>Ciudad:</label>
+											<input type="hidden"  name="idMedico" value="{{item[10]}}">
+											<input type="text" class="form-control" name="ciudad" value="{{item[6]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
+										</div>
+										<div class="form-group">
+											<button class="btn btn-primary" type="submit" onclick="return confirm('¿Está seguro de Actualizar este registro?')">Actualizar</button>
+										</div>
+									</form>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+								</div>
+							</div>
+						</div>
+					</div>
 					<!--Persona-->
 					<div id="modaleditPersona{{item[8]}}" class="modal fade" role="dialog">
 						<div class="modal-dialog">
@@ -88,6 +149,7 @@
 											<input type="hidden"  name="id" value="{{item[8]}}}">
 											<input type="text" class="form-control" name="amaterno" value="{{item[2]}}" required pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1 ]*$" title="No se admiten números ni caracteres especiales.">
 										</div>
+
 										<div class="form-group">
 											<button class="btn btn-primary" type="submit" onclick="return confirm('¿Está seguro de Actualizar este registro?')">Actualizar</button>
 										</div>
